--- a/src/index.css
+++ b/src/index.css
@@ -4,62 +4,49 @@ body {
   font-family: sans-serif;
 }
 
-.btn-rounded {
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-  border: 1px solid transparent;
-  display: inline-block;
-  font-weight: 400;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  padding: .375rem .75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
-  -o-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;  
-}
-.btn-outline-success {
-  color: #28a745;
-  background-color: transparent;
-  background-image: none;
-  border-color: #28a745;
-}
-.btn-outline-danger {
-  color: #dc3545;
-  background-color: transparent;
-  background-image: none;
-  border-color: #dc3545;
-}
+
 .attendees {
   display: flex;
   flex-wrap: wrap;
 }
-.attendee {
-  padding: 5px 5px 0;
-  position: relative;
-  border: 1px solid #ccc;
-  display: flex;  
-  flex-direction: column;
-  align-items: center;
-  margin: 0 10px 10px 0;
+
+@keyframes ripple {
+  0% {
+    transform: scale(0, 0);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(100, 100);
+  }
+}
+.rippleContainer {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: transparent;
+  border: 0;
   cursor: pointer;
 }
-.attendee .avatar {
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
+.rippleContainer:after {
+  content: ' ';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 10px;
+  height: 10px;
+  background: rgba(40, 167, 69, .4);
+  opacity: 0;
+  border-radius: 100%;
+  transform: scale(1, 1) translate(-50%);
+  transform-origin: 50% 50%;
 }
-.attendee .avatar img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.attendee.checked_in .rippleContainer:after {
+  background: rgba(220, 53, 69, .4);
+}
+.rippleContainer:focus:not(:active)::after  {
+  animation: ripple .7s linear;
 }
